# jetson_telescope

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TASKS.md  pytest.ini  requirements.txt  run_app.py  run_catalog.py  run_fase1.py  run_fase2.py  run_mosaic.py  run_night.py  run_planetary.py  run_scheduler.py  run_stacking_demo.py  run_studio.py  run_tracking.py
cpp/: CMakeLists.txt  compile_commands.json
cpp/include/tele/: control_math.hpp
cpp/tests/: test_control_math.cpp
docs/: 01-hardware.md  02-arquitetura.md  03-pipeline-software.md  04-roadmap.md  05-setup-ambiente.md  06-aceleracao-e-tecnicas.md  07-demo-fase1.md  08-reusar-vs-construir.md  09-fase2-autonomia.md  10-arquitetura-e-testes.md  11-arquitetura-recomendada.md  12-fase3-agendador.md  13-calibracao.md  14-otimizacao-gpu.md  15-fits-wcs.md  16-mosaico.md  17-features-t2-t6.md  18-fase4-tracking.md  19-painel-noite-autonoma.md  20-indi-simulador.md  21-astap-e-dados-reais.md  22-autofind-radec.md  23-pesquisa-foss-e-estrategia-dwarf.md  24-estudio-produto.md  25-deconv-denoise.md  26-catalogo-atlas.md  27-mais-alvos-e-hotpixels.md  28-bringup-jetson.md  29-reuso-astroscrappy-ia-starnet.md  30-modo-planetario.md  31-bringup-camera-controle.md  32-hardware-bom.md  comparativo-dwarf.html
models/: README.md
profiles/: redcat51_am3n_imx585.yaml
scripts/: benchmark_gpu.py  fetch_real_data.py  process_real_dataset.py  run_indi_sim.sh
src/: __init__.py  backend.py
tests/: _helpers.py  fake_astap.py  fake_indi.py  test_ai_denoise.py  test_autofind_radec.py  test_autonomous.py  (+39 more)
(+57 files in other folders)
